hphp/hack/test/typecheck/shape_idx3.php.exp
[1]intersect(Tarraykey, Tint)
[2]intersect(Tint, Tarraykey)
[3]intersect(Tint, Tarraykey)
[4]intersect(Tarraykey, Tint)
File "shape_idx3.php", line 21, characters 10-34:
Invalid return type (Typing[4110])
File "shape_idx3.php", line 13, characters 4-6:
This is an int
File "shape_idx3.php", line 11, characters 3-10:
It is incompatible with an array key (int/string)
